tests/paczka1/small_fuzzy/26654506.err
Error in line 9: NS10G0CC5z A794 93,8
Error in line 4: 1gCnG6S S956 90,0
